app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --padrao: #fff;
  --check: #10191d;
  --ball: #fff;
}

.dark {
  --padrao: #10191d;
  --check: #fff;
  --ball: #10191d;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, sans-serif;
  scroll-behavior: smooth;
}

#dark-mode {
  display: flex;
  width: 10%;
  height: 10vh;
  justify-content: center;
  align-items: center;
  background-color: var(--padrao);
  transition: .5s;
}

.header {
  position: relative;
  background-color: var(--padrao);
  transition: .5s;
  overflow-x: hidden;
}

#checkbox:checked+.label .ball {
  transform: translateX(24px);
}

#checkbox {
  opacity: 0;
  position: absolute;
}

#label {
  width: 50px;
  height: 26px;
  background: var(--check);
  border-radius: 50px;
  padding: 5px;
  position: relative;
}

#ball {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 22px;
  height: 22px;
  background-color: var(--ball);
  border-radius: 50%;
  transition: transform 0.2s linear;
}

.skye-picture {
  position: relative;
}

.skye-picture img,
#coding-bg {
  max-width: 100%;
  height: auto;
}

.introduction {
  position: relative;
  padding-bottom: 20px;
  display: flex;
  justify-content: center;
  font-family: Tahoma, Verdana, sans-serif;
  font-size: 60px;
  font-weight: bold;
  transition: .5s;
  color: var(--check);
  text-shadow: 5px 5px #558ABB;
  animation: pulse 4s infinite;
}

@keyframes pulse {
  0% {
    text-shadow: rgb(100, 198, 255) 1px 0 10px;
    ;
  }

  40% {
    text-shadow: 5px 3px 8px rgb(236, 220, 174);
  }

  70% {
    text-shadow: 3px 1px 2px pink;
  }

  100% {
    text-shadow: rgb(255, 72, 246) 1px 0 10px;
    ;
  }
}

.bio {
  display: flex;
  justify-content: center;
  background-color: var(--padrao);
  transition: .5s;
  width: 100%;
  height: 10%;
}

.skills {
  display: flex;
  justify-content: center;
  text-align: center;
  padding: 20px;
  background-color: var(--padrao);
  transition: .5s;
  width: 100%;
  height: 40%;
  color: var(--check);
  font-size: 30px;
  font-weight: bolder;
}

.contact {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 50px;
  padding-bottom: 20px;
}

.contact-btn {
  background-color: var(--padrao);
  transition: .5s;
  padding: 10px;
  color: var(--check);
  font-size: 20px;
  font-weight: bolder;
  border: 1px solid var(--check);
  border-radius: 10px;
}

.contact-btn:hover {
  background-color: var(--check);
  color: var(--padrao);
  transition: .5s;
}

.projects {
  text-align: center;
  font-size: 30px;
  font-weight: 600;
  color: var(--check);
  transition: .5s;
}

.main {
  justify-content: center;
  padding-top: 30px;
  background-color: var(--padrao);
  transition: .5s;
  width: 100%;
  height: 100vh;
}

.projects-wrapper {
  display: grid;
  grid-template-columns: repeat(2, 200px);
  justify-content: center;
  gap: 20px;
  margin-top: 20px;
  border-radius: 12%;
  transition: .5s;
}

.keychain-1 {
  border-radius: 12%;
  border: 2px solid var(--check);
  transition: .5s;
  z-index: 1;
}

.link-image{
  border-radius: 12%;
  border: 2px solid var(--check);
  transition: .5s;
  z-index: 1;
}

.keychain-1:hover {
  transform: scale(2.0);
  transition: .3s;
  z-index: 10;
}

.keychain-1:not(:hover) {
  opacity: 0.9;
  transition: .2s;
}

#coding-bg {
  position: fixed;
  opacity: 0.3;
  border-radius: 22px;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  filter: blur(1px);
  pointer-events: none;
}

.youtube-player {
  display: flex;
  justify-content: center;
  margin: auto;
  position: relative;
  transition: 0.5s;
  padding-top: 30px;
}

.skye-video {
  border: 2px solid var(--check);
}

.highlights-container {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding-top: 60px;
  background-color: var(--padrao);
  transition: .5s;
  width: 100%;
  height: 500px;
  text-align: center;
  font-size: 30px;
  font-weight: 600;
  color: var(--check);
  transition: .5s;
}

.highlights {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--check);
  width: 90vw;
  height: 350px;
  transition: .5s;
  border: 1px solid var(--check);
  border-radius: 20px;
}

.highlights-list {
  position: relative;
  color: var(--padrao);
  font-size: 1.2rem;
  transition: .5s;
  text-align: left;
}

.Links {
  display: flex;
  justify-content: center;
  flex-direction: column;
  transition: .5s;
  border-radius: 20px;
  width: 100%;
  height: 500px;
  text-align: center;
  font-size: 30px;
  font-weight: 600;
  color: var(--check);
}

.links-panel {
  display: flex;
  margin: 0;
  padding: 0;
  justify-content: center;
  flex-direction: column;
  transition: .5s;
}

.links-group {
  display: grid;
  grid-template-columns: repeat(2, 200px);
  gap: 20px;
  justify-content: center;
  flex-direction: column;
  transition: .5s;
  width: 100%;
}

#logo:hover {
  transform: scale(1.1);
  opacity: 1;
  z-index: 1;
  transition: .8s;
}

.card-wrapper {
  display: flex;
  justify-content: center;
  padding-top: 30px;
  background-color: var(--padrao);
  transition: .5s;
  width: 100%;
  height: 200px;
}

.card-1 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80px;
  height: 80px;
  background-color: var(--check);
  border-top-left-radius: 50%;
  border-bottom-left-radius: 50%;
  color: var(--padrao);
  transition: 1s;
  text-align: center;
  font-weight: bold;
}

.card-1:hover {
  box-shadow: 1px 2px 2px 1px rgb(255, 72, 246);
  cursor: pointer;
  text-shadow: rgb(255, 72, 246) 1px 0 10px;
}

.card-1-expanded:hover {
  box-shadow: 1px 2px 2px 0px rgb(255, 72, 246);
  transition: 1s;
}

.card-1-expanded {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 320px;
  height: 80px;
  background-color: var(--check);
  border-top-right-radius: 50px;
  border-bottom-right-radius: 50px;
  color: var(--padrao);
  animation-duration: 0.4s;
  animation-name: slidein;
  text-align: center;
  font-weight: bold;
}

@keyframes slidein {
  from {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 0%
  }

  to {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 0%;
    width: 380px;
  }
}

.footer {
  position: relative;
  display: flex;
  justify-content: flex-start;
  background-color: var(--check);
  transition: .5s;
  width: 100%;
  height: 150px;
}

#Topper {
  position: relative;
}

.topper {
  display: flex;
  justify-content: center;
  background-color: var(--check);
  transition: .5s;
  width: 100%;
  height: 60px;
}

.dropdown-content {
  display: flex;
  flex-direction: column;
  position: absolute;
  margin-top: 30px;
  background-color: var(--check);
  min-width: 260px;
  z-index: 1;
}

.dropdown-item {
  padding: 12px;
  color: var(--padrao);
  text-align: center;
  border: 1px solid var(--padrao);
}

.dropdown-item:hover {
  background-color: var(--padrao);
  color: var(--check);
  transition: 0.6s;
}

.navbar-menu div {
  height: 4px;
  background-color: var(--padrao);
  margin: 5px 0;
  border-radius: 25px;
  transition: 0.3s;
}

.navbar-menu {
  display: block;
}

.one {
  width: 30px;
}

.two {
  width: 20px;
}

.three {
  width: 25px;
}

.navbar-menu:hover div {
  width: 30px;
}

.skye-picture {
display: flex;
justify-content: center;
align-items: center;
padding-bottom: 30px;
}

.contact-info {
  display: flex;
  color: var(--padrao);
  transition: .5s;
  width: 30%;
  padding: 16px;
  font-size: 1.5vh;
}

.top {
  display: flex;
  justify-content: flex-end;
  align-items: flex-start;
  padding-top: 50px;
  width: 50%;
}

.top-btn {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--padrao);
  color: var(--check);
  transition: .5s;
  font-size: 18px;
  padding: 10px 20px;
  border-radius: 12px;
}

.top-btn:hover {
  background-color: var(--check);
  color: var(--padrao);
  transition: .5s;
  border: 1px solid var(--padrao);
}

.video-responsive {
  display: flex;
  justify-content: center;
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
  height: 0;
}

.video-responsive iframe {
  display: flex;
  justify-content: center;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
}

body {
  background-color: var(--padrao);
  margin: auto;
  padding: 0;
  transition: 0.5s;
}

